[gd_scene load_steps=4 format=3 uid="uid://c0rteo8i7wma1"]

[ext_resource type="Script" path="res://code/menu/main_menu.gd" id="1_wn1on"]
[ext_resource type="PackedScene" uid="uid://dkokv0n7isjqq" path="res://data/widgets/menu_button.tscn" id="2_4tqrc"]
[ext_resource type="Texture2D" uid="uid://n6dkuh4h448v" path="res://data/logos/game_logo.png" id="3_gbko0"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wn1on")

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -124.0
offset_right = 224.0
offset_bottom = -24.0
grow_vertical = 0
text = "Play"

[node name="DecksButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -224.0
offset_top = -124.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
text = "Decks"

[node name="MenuButton" parent="." instance=ExtResource("2_4tqrc")]
layout_mode = 1

[node name="GameLogo" type="TextureRect" parent="."]
layout_mode = 1
offset_left = 24.0
offset_top = 24.0
offset_right = 617.0
offset_bottom = 247.0
texture = ExtResource("3_gbko0")

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="DecksButton" to="." method="_on_decks_button_pressed"]
